# MultiAgentSlam-ROS

./: .gitignore  README.md
Netlogo-Swarmies-Code/: BrianaBarajas.nlogo  NewburyPark_Sw17.nlogo  [Sw5]competitionBaseCode_MYohani.nlogo  [Sw5]competitionBaseCode_OJoseph.nlogo  [Sw5]competitionBaseCode_ROscar.nlogo  [Sw5]competitionBaseCode_TOmar.nlogo
Swarmathon-Arduino/Swarmathon_Arduino/: Swarmathon_Arduino.ino
arduino/swarmie_control/: swarmie_control.ino
launch/: swarmie.launch
misc/: deploy.sh  nohup.out  rover_onboard_node_launch.sh
misc/testfolder/: deployreadme.md
python/Plotter/: Plotter.py
src/abridge/src/: abridge.cpp
src/behaviours/: CMakeLists.txt  package.xml
src/behaviours/cmake/modules/: Finddistributed_slam.cmake
src/behaviours/src/: Controller.h  DriveController.cpp  DriveController.h  DropOffController.cpp  DropOffController.h  LogicAssistant.h  LogicController.cpp  LogicController.h  ManualWaypointController.cpp  ManualWaypointController.h  ObstacleAssistant.h  ObstacleController.cpp  ObstacleController.h  PID.cpp  PID.h  PickUpController.cpp  PickUpController.h  Pose.h  ROSAdapter.cpp  RangeController.cpp  RangeController.h  Result.h  SearchController.cpp  SearchController.h  Tag.cpp  Tag.h  Utilities.cpp  Utilities.h
src/diagnostics/: CMakeLists.txt
src/distributed_slam/: CMakeLists.txt  package.xml
src/distributed_slam/Config/: slam_in.json
src/distributed_slam/cmake/modules/: Boost.cmake  FindBetterEnum.cmake  FindEigen3.cmake  FindInterfaces.cmake  FindJSON.cmake  FindMKL.cmake  FindSharedStructs.cmake  FindTemplates.cmake  FindTools.cmake  Finddistributed_slam.cmake
src/distributed_slam/cmake/scripts/: BetterEnumConfig.cmake.in  InterfacesConfig.cmake.in  JSONConfig.cmake.in  SharedStructsConfig.cmake.in  TemplatesConfig.cmake.in  ToolsConfig.cmake.in  distributed_slamConfig.cmake.in
src/distributed_slam/include/: Adapter.h  Logger.h
src/distributed_slam/include/better_enum/: CMakeLists.txt  enum.h
src/distributed_slam/include/interfaces/: CMakeLists.txt  IncidentRayInterface.h  RoverInterface.h
src/distributed_slam/include/interfaces/include/: IncidentRayInterface.h  RoverInterface.h
src/distributed_slam/include/nholmann_json/: CMakeLists.txt  json.hpp
src/distributed_slam/include/shared_structs/: CMakeLists.txt  SLAMConfigIn.h  SharedMemoryStructs.h
src/distributed_slam/include/shared_structs/include/: SLAMConfigIn.h  SharedMemoryStructs.h
src/distributed_slam/include/templates/: CMakeLists.txt
src/distributed_slam/include/templates/Filters/: FIRFilter.h  VarianceFilter.h
src/distributed_slam/include/templates/include/Filters/: CovarianceFilter.h  MeanFilter.h
src/distributed_slam/include/templates/include/Matrix/: Matrix.h
src/distributed_slam/include/templates/include/Tools/: Node.h  Transformation.h  cpp14_utils.h
src/distributed_slam/include/tools/: CMakeLists.txt
src/distributed_slam/include/tools/Node/: Node.h
src/distributed_slam/include/tools/SharedMemory/: SharedMemory.h
src/distributed_slam/include/tools/Transformation/: Transformation.h
src/distributed_slam/include/tools/include/SharedMemory/: SharedMemory.h
src/distributed_slam/src/: Adapter.cpp  Adapter.h  Logger.cpp
src/distributed_slam/src/Agent/Detections/: Detection.cpp  Detection.h
src/distributed_slam/src/Agent/Moments/: Moments.cpp  Moments.h
src/distributed_slam/src/Agent/Rover/: Rover.cpp  Rover.h  RoverFactory.cpp  RoverFactory.h
src/distributed_slam/src/Slam/FeatureSet/: FeatureSet.cpp  FeatureSet.h
src/distributed_slam/src/Slam/Seif/: Seif.cpp  Seif.h
src/distributed_slam/src/Slam/SlamAdapter/: SlamAdapter.cpp  SlamAdapter.h
src/distributed_slam/src/Utilities/ActiveRovers/: ActiveRovers.cpp  ActiveRovers.h
src/distributed_slam/src/Utilities/ConfigParser/: ConfigParser.cpp  ConfigParser.h
src/distributed_slam/src/Utilities/Equations/: Equations.cpp  Equations.h
src/distributed_slam/src/Utilities/RedBlackTree/: RedBlackTree.cpp  RedBlackTree.h
src/distributed_slam/tests/: CMakeLists.txt
src/distributed_slam/tests/Utilities/: utilsTest.cpp
src/distributed_slam/tests/include/: utilsTest.h
src/gazebo_plugins/: CMakeLists.txt
src/mobility/: CMakeLists.txt
src/mobility/src/: DropOffController.cpp  DropOffController.h  PIDController.cpp  PIDController.h  PickUpController.cpp  SearchController.cpp  SearchController.h  Vec2D.hpp  Vec2D.impl  messages.cpp  messages.hpp  mobility.cpp  mobility_basecode.cpp  path.cpp  path.hpp  waypoints.txt
src/ros_slam_msgs/: CMakeLists.txt  package.xml
src/ros_slam_msgs/msg/: AgentPairs.msg  AuxBeliefs.msg  AuxFeatureSet.msg  Belief.msg  Classifier.msg  Feature.msg  FeatureSet.msg  Signature.msg  Transformation.msg  TransformationPairs.msg
src/rqt_rover_gui/: CMakeLists.txt
src/rqt_rover_gui/src/: GazeboSimManager.cpp
src/slam_logger/: CMakeLists.txt  package.xml
src/slam_logger/include/: Logger.h
src/slam_logger/src/: Logger.cpp
