<?xml version="1.0"?>
<package>
  <name>behaviours</name>
  <version>0.2.0</version>
  <description>Algorithmic implementation of random search as a finite state machine</description>

  <maintainer email="swarmathon@cs.unm.edu">NASA Swarmathon</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>random_numbers</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>apriltags_ros</build_depend>
  <build_depend>swarmie_msgs</build_depend>
  <build_depend>ros_slam_msgs</build_depend>

  <build_depend>distributed_slam</build_depend>
  <build_depend>slam_logger</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>random_numbers</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>apriltags_ros</run_depend>
  <run_depend>swarmie_msgs</run_depend>
  <run_depend>ros_slam_msgs</run_depend>

  <run_depend>distributed_slam</run_depend>
  <run_depend>slam_logger</run_depend>

  <export>

  </export>
</package>
