<?xml version="1.0"?>
<package>
    <name>distributed_slam</name>
    <version>0.2.0</version>
    <description>Recursive state estimation; implemented filter is Sparse Extended Information Filter (SEIF).</description>
    <maintainer email="mason.uren600@myci.csuci.edu">Masters Thesis</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>ros_slam_msgs</build_depend>

    <build_depend>Boost</build_depend>
    <build_depend>Eigen3</build_depend>
    <build_depend>MKL</build_depend>
    <build_depend>Interfaces</build_depend>
    <build_depend>JSON</build_depend>
    <build_depend>SharedStructs</build_depend>
    <build_depend>Templates</build_depend>
    <build_depend>BetterEnum</build_depend>
    <build_depend>Tools</build_depend>

    <run_depend>ros_slam_msgs</run_depend>
    <run_depend>Boost</run_depend>
    <run_depend>Eigen3</run_depend>
    <run_depend>MKL</run_depend>
    <run_depend>Interfaces</run_depend>
    <run_depend>JSON</run_depend>
    <run_depend>SharedStructs</run_depend>
    <run_depend>Templates</run_depend>
    <run_depend>BetterEnum</run_depend>
    <run_depend>Tools</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>