<?xml version="1.0" ?>
<package>
    <name>slam_logger</name>
    <version>1.0.0</version>
    <description>
        Logging tool built specifically for the distributed_slam package.
    </description>
    <maintainer email="mason.uren600@myci.csuci.edu">Masters Thesis</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>distributed_slam</build_depend>
    <build_depend>Boost</build_depend>

    <run_depend>distributed_slam</run_depend>
    <run_depend>Boost</run_depend>

    <export>

    </export>
</package>